MQTTBroker/kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqttbroker-service
spec:
  selector:
    app: mqttbroker
  ports:
    - protocol: TCP
      port: 33004
      nodePort: 32004 # Port to access the service outside the cluste
      targetPort: 1883  # Port your application is listening on inside the pods
  type: LoadBalancer      # Set the Service type to NodePort
