MQTTBroker/kube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mqttbroker-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: mqttbroker
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mqttbroker-service
            port:
              number: 1883
